--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
+
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.14.0'
-DFX_NETWORK='local'
-CANISTER_CANDID_PATH_backend='/home/viktor/motoko_bootcamp/calculator_ic/.dfx/local/canisters/backend/backend.did'
-CANISTER_CANDID_PATH_BACKEND='/home/viktor/motoko_bootcamp/calculator_ic/.dfx/local/canisters/backend/backend.did'
+DFX_NETWORK='ic'
+CANISTER_CANDID_PATH_backend='/home/viktor/motoko_bootcamp/calculator_ic/.dfx/ic/canisters/backend/backend.did'
+CANISTER_CANDID_PATH_BACKEND='/home/viktor/motoko_bootcamp/calculator_ic/.dfx/ic/canisters/backend/backend.did'
+INTERNET_IDENTITY_CANISTER_ID='rdmx6-jaaaa-aaaaa-aaadq-cai'
+CANISTER_ID_INTERNET_IDENTITY='rdmx6-jaaaa-aaaaa-aaadq-cai'
+CANISTER_ID_internet_identity='rdmx6-jaaaa-aaaaa-aaadq-cai'
 FRONTEND_CANISTER_ID='3ejf7-5iaaa-aaaal-qb3pq-cai'
 CANISTER_ID_FRONTEND='3ejf7-5iaaa-aaaal-qb3pq-cai'
 CANISTER_ID_frontend='3ejf7-5iaaa-aaaal-qb3pq-cai'
@@ -10,19 +14,5 @@ BACKEND_CANISTER_ID='gn5qg-saaaa-aaaal-qbzia-cai'
 CANISTER_ID_BACKEND='gn5qg-saaaa-aaaal-qbzia-cai'
 CANISTER_ID_backend='gn5qg-saaaa-aaaal-qbzia-cai'
 CANISTER_ID='3ejf7-5iaaa-aaaal-qb3pq-cai'
-CANISTER_CANDID_PATH='/home/viktor/motoko_bootcamp/calculator_ic/.dfx/local/canisters/frontend/assetstorage.did'
-# END DFX CANISTER ENVIRONMENT VARIABLES
-# DFX CANISTER ENVIRONMENT VARIABLES
-DFX_VERSION='0.14.0'
-DFX_NETWORK='local'
-CANISTER_CANDID_PATH_backend='/home/viktor/motoko_bootcamp/calculator_ic/.dfx/local/canisters/backend/backend.did'
-CANISTER_CANDID_PATH_BACKEND='/home/viktor/motoko_bootcamp/calculator_ic/.dfx/local/canisters/backend/backend.did'
-FRONTEND_CANISTER_ID='bd3sg-teaaa-aaaaa-qaaba-cai'
-CANISTER_ID_FRONTEND='bd3sg-teaaa-aaaaa-qaaba-cai'
-CANISTER_ID_frontend='bd3sg-teaaa-aaaaa-qaaba-cai'
-BACKEND_CANISTER_ID='bkyz2-fmaaa-aaaaa-qaaaq-cai'
-CANISTER_ID_BACKEND='bkyz2-fmaaa-aaaaa-qaaaq-cai'
-CANISTER_ID_backend='bkyz2-fmaaa-aaaaa-qaaaq-cai'
-CANISTER_ID='bd3sg-teaaa-aaaaa-qaaba-cai'
-CANISTER_CANDID_PATH='/home/viktor/motoko_bootcamp/calculator_ic/.dfx/local/canisters/frontend/assetstorage.did'
+CANISTER_CANDID_PATH='/home/viktor/motoko_bootcamp/calculator_ic/.dfx/ic/canisters/frontend/assetstorage.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
