--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# dotenv environment variables file
+.env
+.env.test
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -29,3 +33,4 @@ dist-ssr
 .dfx
 .vessel
 .mops
+canister_ids.json
